# multimodal-sae

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
run_scripts/: attribution_patching.py  cache.py  cache_image.py  explain.py  explain_images.py  image_activations.py  score.py
sae_auto_interp/: config.py  pipeline.py  prompt.py  utils.py
sae_auto_interp/agents/: __init__.py  utils.py
sae_auto_interp/agents/explainers/: __init__.py  explainer.py
sae_auto_interp/agents/explainers/image_explainer/: image_explainer.py  prompts.py
sae_auto_interp/agents/explainers/simple/: simple.py
sae_auto_interp/agents/scorers/: __init__.py
sae_auto_interp/agents/scorers/clip/: clip_scorer.py
sae_auto_interp/agents/scorers/segment/: label_refiner.py  segment_scorer.py  utils.py
sae_auto_interp/agents/scorers/simple/: prompt.py  simple_scorer.py
sae_auto_interp/clients/: __init__.py  client.py  local.py  openai.py  sglang.py
sae_auto_interp/explainers/: __init__.py  explainer.py
sae_auto_interp/explainers/simple/: prompt_builder.py  simple.py
sae_auto_interp/features/: __init__.py  cache.py  constructors.py  features.py  loader.py  samplers.py  steering.py
sae_auto_interp/features/dim_reduce/: __init__.py  dim_reducer.py  umap.py
sae_auto_interp/features/patching/: __init__.py  attribution.py  utils.py
sae_auto_interp/launch/cache/: cache.py  cache_image.py
sae_auto_interp/launch/explain/: explain_images.py
sae_auto_interp/launch/features/: attribution_patching.py  filter_steering.py  steering.py
sae_auto_interp/launch/score/: clip_score.py  segment.py
sae_auto_interp/oai_autointerp/activations/: activation_records.py  activations.py
sae_auto_interp/oai_autointerp/explanations/: __init__.py  explanations.py  few_shot_examples.py  prompt_builder.py  scoring.py  simulator.py
sae_auto_interp/sae/: config.py
sae_auto_interp/scorers/classifier/: classifier.py  fuzz.py  sample.py
sae_auto_interp/scorers/generation/: generation.py
sae_auto_interp/scorers/simulator/: oai_simulator.py
tools/: create_filters_from_attribution.py  generate_dataset_flux.py  gpt4o_consistency.py  label_explanation.py  model_steering.py  prepare_cache_dataset.py  probe_activations.py  text_activation_vis.py
train/sae/: README.md  pyproject.toml
train/sae/sae/: __main__.py  config.py  data.py  trainer.py  utils.py
train/sae/tools/: make_hf_dataset_llava.py
