[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sae_auto_interp"
version = "0.1.0"
description = "Automated Interpretability"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["interpretability", "explainable-ai"]
dependencies = [
    "accelerate",  # For device_map in from_pretrained
    "blobfile",
    "datasets",
    "einops",
    "hf_transfer",
    "httpx==0.23.3",
    "huggingface-hub",
    "loguru",
    "natsort",  # For sorting module names
    "nnsight",
    "orjson",
    "openai",
    "pillow==10.4.0",
    "safetensors",
    "simple_parsing",
    "sglang[all]",
    "torch>=2.1.0",
    "torchtyping",
    "torchvision",
    "transformers==4.44.0",
    "umap-learn[plot]",
]


[tool.pyright]
include = ["sae_auto_interp*"]
reportPrivateImportUsage = false

[tool.setuptools.packages.find]
include = ["sae_auto_interp*"]

[tool.isort]
profile = "black"
src_paths = ["sae_auto_interp", "test"]

[tool.ruff]
# TODO: Clean up or remove experiments folder.
exclude = ["experiments", "**/prompts/*", "**/prompts.py","**/simulator.py"]
# Avoid automatically removing unused imports in __init__.py files.
# Such imports will be flagged with a dedicated message suggesting
# that the import is either added to the module's __all__ symbol
ignore-init-module-imports = true
# Ignore F821 (undefined name) errors, as they are common in type annotations.
ignore = ["F722", "F821"]
# Same as Black.
line-length = 88
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes
# See https://beta.ruff.rs/docs/rules/ for more possible rules
select = ["E", "F", "I"]
