[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sae_auto_interp"
version = "0.1.0"
description = "Automated Interpretability"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["interpretability", "explainable-ai"]
dependencies = [
    "accelerate",  # For device_map in from_pretrained
    "blobfile",
    "datasets",
    "einops",
    "hf_transfer",
    "httpx==0.23.3",
    "huggingface-hub",
    "loguru",
    "natsort",  # For sorting module names
    "nnsight",
    "orjson",
    "openai",
    "pillow==10.4.0",
    "safetensors",
    "simple_parsing",
    "sglang[all]",
    "torch>=2.1.0",
    "torchtyping",
    "torchvision",
    "transformers==4.45.2",
    "umap-learn[plot]",
    "plotly",
    "opencv-python"
]


[tool.pyright]
include = ["sae_auto_interp*"]
reportPrivateImportUsage = false

[tool.setuptools.packages.find]
include = ["sae_auto_interp*"]

[tool.isort]
profile = "black"
src_paths = ["sae_auto_interp", "test"]
